fixed contrast issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -63,9 +63,11 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    background-color: rgba(158, 193, 163, 0.5);
+    /* background-color: rgba(158, 193, 163, 0.9); */
+    background-color: rgba(207, 224, 195, 0.9);
     padding: 10px 20px;
     text-align: center;
+    font-weight: 900;
 }
 
 .hero article {
@@ -84,9 +86,33 @@ header {
 }
 
 form {
-    display: grid;
-    border: none;
     font-weight: 600;
+}
+
+fieldset {
+    border: none;
+    display: grid;
+    grid-template: 3 2;
+    padding: 1rem;
+}
+
+.column1 {
+    grid-column: 1;
+}
+
+.column2 {
+    grid-column: 2;
+}
+
+button {
+    border-radius: 1rem;
+    margin: 1rem;
+    padding: .5rem;
+    
+}
+
+button:hover {
+
 }
 
 section {
